syntax = "proto3";

package ekube.namespace.v1;
option go_package = "ekube/api/pb/namespace/v1;namespace";

import "pb/namespace/v1/namespace.proto";
import "ekube/pb/page/page.proto";

// RPC 应用集群管理
service RPC {
  // 查询企业空间列表
  rpc ListNamespace(ListNamespaceRequest) returns(NamespaceSet);
  // 查询企业空间详情
  rpc DescribeNamespace(DescribeNamespaceRequest) returns(Namespace);
}

message ListNamespaceRequest {
  // 分页
  // @gotags: json:"page"
  ekube.page.PageRequest page = 1;
  // 根据用户权限过滤展示
  // @gotags: json:"cluster_id"
  string cluster_id = 2;
  // 根据用户权限过滤展示
  // @gotags: json:"workspace"
  string workspace = 3;
}

enum DESCRIBE_BY {
  // 通过Id
  ID = 0;
  // 通过名称
  NANE = 1;
}

message DescribeNamespaceRequest {
  // 获取详情的方式
  // @gotags: json:"describe_by"
  DESCRIBE_BY describe_by = 1;
  // 集群Id
  // @gotags: json:"id"
  string id = 2;
  // 集群Id
  // @gotags: json:"name"
  string name = 3;
  // 企业空间
  // @gotags: json:"workspace"
  string workspace = 4;
}

message UpdateNamespaceRequest {

}

message DeleteNamespaceRequest {
  // 删除workspace
  // @gotags: json:"id"
  string id = 1;
}